# qwt-cmake

./: CMakeLists.txt  LICENSE.md  README.md  qwt-6.2.1.patch
